# TP2_Open_Data

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  example_usage.py  exploration_api.py  pyproject.toml  requirements.txt  verify_data.py
notebooks/: exploration.ipynb
pipeline/: __init__.py  config.py  fetcher.py  main.py  storage.py  transformer.py
tests/: __init__.py  test_fetcher.py  test_storage.py  test_transformer.py
